[gd_scene load_steps=6 format=3 uid="uid://byvdnwqvy2fa2"]

[ext_resource type="Script" path="res://Scripts/title.gd" id="1_p7wjv"]
[ext_resource type="Texture2D" uid="uid://c2cwlxfni1nfe" path="res://UI-Images/blank.png" id="2_ugwlf"]
[ext_resource type="Texture2D" uid="uid://csuqkx4qpig3r" path="res://UI-Images/TITLE.png" id="3_bgace"]
[ext_resource type="PackedScene" uid="uid://dgoi5mbunlb1v" path="res://Singletons/GameManager.tscn" id="4_uy8og"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ls27"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 16

[node name="Title" type="Control"]
layout_direction = 1
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_p7wjv")

[node name="TitleBackground" type="TextureRect" parent="."]
layout_mode = 0
scale = Vector2(15.605, 15.605)
texture = ExtResource("2_ugwlf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 250.0
offset_right = 500.0
offset_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/v_separation = 9

[node name="Play" type="Button" parent="VBoxContainer/HBoxContainer/GridContainer"]
texture_filter = 1
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_2ls27")
text = "Play"

[node name="Tutorial" type="Button" parent="VBoxContainer/HBoxContainer/GridContainer"]
texture_filter = 1
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_2ls27")
text = "Tutorial"

[node name="Settings" type="Button" parent="VBoxContainer/HBoxContainer/GridContainer"]
texture_filter = 1
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_2ls27")
text = "Settings
"

[node name="Quit" type="Button" parent="VBoxContainer/HBoxContainer/GridContainer"]
texture_filter = 1
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_2ls27")
text = "Quit
"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
texture_filter = 1
layout_mode = 0
offset_right = 500.0
offset_bottom = 250.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer2"]
custom_minimum_size = Vector2(250, 125)
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("3_bgace")
expand_mode = 1
stretch_mode = 4

[node name="GameManager" parent="." instance=ExtResource("4_uy8og")]

[connection signal="button_up" from="VBoxContainer/HBoxContainer/GridContainer/Play" to="." method="_on_play_button_up"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/GridContainer/Tutorial" to="." method="_on_tutorial_button_up"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/GridContainer/Settings" to="." method="_on_settings_button_up"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/GridContainer/Quit" to="." method="_on_quit_button_up"]
